// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render DistributionFormat with "Dataset" correctly 1`] = `
<div
  className="fdk-label-distribution mr-2 fdk-label-distribution-offentlig"
>
  <span>
    <strong
      className="fdk-distribution-format"
    >
      xml
    </strong>
  </span>
  ESRI Filgeodatabase
</div>
`;

exports[`should render DistributionFormat with "Dataset" correctly with no type 1`] = `
<div
  className="fdk-label-distribution mr-2 fdk-label-distribution-offentlig"
>
  ESRI Filgeodatabase
</div>
`;
